<resources>
    <string name="app_name">BloodShare</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="connect_fb">CONNECT TO FACEBOOK</string>
    <string name="account">doesn\'t have account ?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="header">header</string>
    <string name="arrowback">arrowback</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phonenumber">Phone Number</string>
    <string name="retypepass">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="homeaddress">Home Address</string>
    <string name="defaultlocation">Default Location</string>
    <string name="agree">Agree with Terms And Conditions</string>
    <string name="almostthere">Almost There</string>
    <string name="thankyou">Thank you for registering with us.One more</string>
    <string name="youneed">step,you need to check your email</string>
    <string name="active">to active your account</string>
    <string name="verify">verify</string>
    <string name="verifyyour">Verify Your Account</string>
    <string name="sendveri">We have send verification code to your email</string>
    <string name="enter">Enter verification code here...</string>
    <string name="send">send</string>
    <string name="code">doesn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="headerprofile">Header Profile</string>
    <string name="name">Andreas Suryadi</string>
    <string name="bloodtype">Blood Type : O</string>
    <string name="a75">75</string>
    <string name="bloodgive">BLOOD GIVE</string>
    <string name="a100">100</string>
    <string name="a330">330</string>
    <string name="bloodrecieved">BLOOD RECIEVED</string>
    <string name="thanks">THANKS</string>
    <string name="searchdonor">Search Donor</string>
    <string name="searchdonor2">Search donor near you</string>
    <string name="bloodneeded">Blood Needed</string>
    <string name="bloodneeded2">4 Users need blood</string>
    <string name="message">Message</string>
    <string name="message2">5 New Message</string>
    <string name="donorhistory">Donor History</string>
    <string name="donorhistory2">5 Gives, 2 Recieved</string>
</resources>