<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlmostThereActivity"
    android:background="@color/lightblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almostthere"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:gravity="center"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/roboto">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thankyou"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:gravity="center"
                android:fontFamily="@font/roboto">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/youneed"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:gravity="center"
                android:fontFamily="@font/roboto">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:gravity="center"
                android:fontFamily="@font/roboto">
            </TextView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnverify"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>