<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/ic_header_profile"
            android:contentDescription="@string/headerprofile">

        </ImageView>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_side_menu"
            android:contentDescription="@string/headerprofile"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp">
        </ImageView>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_notification"
            android:contentDescription="@string/headerprofile"
            android:layout_marginStart="320dp"
            android:layout_marginTop="15dp">
        </ImageView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/shadowheader"
            android:layout_marginTop="160dp"
            tools:ignore="MissingConstraints">

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            app:border_width="4dp"
            app:border_color="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="205dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/lightblue"
                android:textSize="28sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/bloodtype"
                android:textColor="@color/fonttitle"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"></TextView>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/shadowheader"
            android:layout_marginTop="305dp"
            tools:ignore="MissingConstraints">

        </RelativeLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="1">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="310dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/a75"
                    android:textColor="@color/lightblue"
                    android:textSize="30sp"
                    android:fontFamily="@font/roboto_bold"></TextView>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/bloodgive"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_medium">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="310dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/a100"
                    android:textColor="@color/lightblue"
                    android:textSize="30sp"
                    android:fontFamily="@font/roboto_bold"></TextView>

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/bloodrecieved"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_medium">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="310dp"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/a330"
                    android:textColor="@color/lightblue"
                    android:textSize="30sp"
                    android:fontFamily="@font/roboto_bold"></TextView>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/thanks"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_medium">
                </TextView>
            </LinearLayout>
        </GridLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/shadowheader"
            android:layout_marginTop="382dp"
            tools:ignore="MissingConstraints">

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:columnCount="2"
            android:rowCount="2">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="390dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/search_donor"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_search_donor" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/searchdonor"
                    android:textColor="@color/fonttitle"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/searchdonor2"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="390dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/bloodneeded"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_blood_needed" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/bloodneeded"
                    android:textColor="@color/fonttitle"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/bloodneeded2"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/message"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_message" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/message"
                    android:textColor="@color/fonttitle"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/message2"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/donorhistory"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_donor_history" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/donorhistory"
                    android:textColor="@color/fonttitle"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/donorhistory2">

                </TextView>
            </LinearLayout>
        </GridLayout>
    </RelativeLayout>

</ScrollView >